<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent" >

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_login"
        android:layout_centerHorizontal="true"
        android:textSize="14sp"
        android:layout_marginTop="7dp" />

    <EditText
        android:id="@+id/edUsername2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:inputType="text"
        android:hint="@string/hint_username"
        android:layout_marginTop="12dp"
        android:textSize="16sp"
        android:layout_below="@id/welcome"/>

    <EditText
        android:id="@+id/edPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_pass"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:textSize="14sp"
        android:layout_marginTop="12dp"
        android:layout_below="@id/edUsername2"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="16sp"
        android:layout_marginTop="12dp"
        android:layout_below="@id/edPassword2"/>

    <TextView
        android:id="@+id/tvForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_pass"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btnLogin"/>

    <TextView
        android:id="@+id/tvNoAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_account"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_below="@id/tvForgot"/>

    <Button
        android:id="@+id/goSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:layout_marginStart="7dp"
        android:layout_alignBaseline="@id/tvNoAccount"
        android:layout_toEndOf="@id/tvNoAccount"/>

</RelativeLayout>