<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_signup"
            android:layout_centerHorizontal="true"
            android:textSize="14sp"
            android:layout_marginTop="7dp" />


        <EditText
            android:id="@+id/edEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:textSize="16sp"
            android:autofillHints="name"
            android:inputType="textEmailAddress"
            android:layout_marginTop="12dp"
            android:layout_below="@id/welcome"/>


        <EditText
            android:id="@+id/edUsername2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username"
            android:autofillHints="name"
            android:inputType="text"
            android:textSize="16sp"
            android:layout_marginTop="12dp"
            android:layout_below="@id/edEmail"/>

        <EditText
            android:id="@+id/edPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_pass"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:textSize="16sp"
            android:layout_marginTop="12dp"
            android:layout_below="@id/edUsername2"/>

        <Button
            android:id="@+id/btnSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edPassword2"
            android:layout_marginTop="12dp"
            android:text="@string/signup"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvForgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_below="@id/btnSignup"/>

        <TextView
            android:id="@+id/tvGotAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_account"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_below="@id/tvForgot"/>

        <Button
            android:id="@+id/goLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/tvGotAccount"
            android:layout_marginStart="7dp"
            android:layout_toEndOf="@id/tvGotAccount"
            android:text="@string/login" />

</RelativeLayout>

