<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dp_16">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:src="@mipmap/launcher_round"/>

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_login"
            android:layout_centerHorizontal="true"
            android:textSize="14sp"
            android:layout_marginTop="7dp"
            android:layout_below="@id/logo"/>

        <EditText
            android:id="@+id/edUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username"
            android:layout_marginTop="12dp"
            android:textSize="16sp"
            android:layout_below="@id/welcome"/>

        <EditText
            android:id="@+id/edPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_pass"
            android:inputType="textPassword"
            android:textSize="14sp"
            android:layout_marginTop="12dp"
            android:layout_below="@id/edUsername"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="16sp"
            android:layout_marginTop="12dp"
            android:layout_below="@id/edPassword"/>

        <TextView
            android:id="@+id/tvForgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_pass"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/btnLogin"/>

        <TextView
            android:id="@+id/tvNoAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_account"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_below="@id/tvForgot"/>

        <Button
            android:id="@+id/goSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:layout_marginStart="7dp"
            android:layout_alignBaseline="@id/tvNoAccount"
            android:layout_toRightOf="@id/tvNoAccount"/>

    </RelativeLayout>
</layout>